p-grafana-ingress.yml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
## Service Location n Characters
  - host: graf.jokoss.site
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
